1.202 2016-03-05

    [ FEATURE ]
    * Allowed the constructor to accept a hashref or a hash
      as requested in issue #1

    [ TESTS ]
    * Added many more tests to the suite


1.201 2016-03-05

    [ DOCUMENTATION ]
    * Added a blurb to use Crypt::Eksblowfish::Bcrypt instead

    [ BUILD ]
    * Made the build a bit more generic

    [ TESTS ]
    * Alleviated some of the issues taking lots of TravisCI time


1.200_001 2016-03-02

    [ DOCUMENTATION ]
    * fixed typos
    * organized methods by constructor, then alphabetical
    * showed more in-depth examples of how to use the methods
    * moved example code to the SYNOPSIS section
    * made a DESCRIPTION section
    * added Chase Whitener as current maintainer

    [ TESTS ]
    * Changed to use Try::Tiny instead of raw eval


1.0.2   2013-01-23

    [ TESTS ]
    * Module is now tested by Travis CI


1.0.1   2012-04-07

    [ BUGFIX ]
    * $VERSION was not incremented in previous release.


1.0.0   2012-04-07

    [ BUGFIX ]
    * Remove accidental dependency on perl 5.10
      introduced in previous revision

    [ FEATURE ]
    * bcrypt_b64digest method added to return digest
      base64 encoded using the base 64 alphabet commonly
      used with bcrypt

    * b64digest method now returns a base64 that is
      compatible with the standard MIME alphabet.

      To access the version of base64 commonly used with
      bcrypt, use the new bcrypt_b64digest method

      This is a backwards incompatible change

    [ TESTS ]
    * Added additional tests for new methods


0.1.1   2012-04-05

    [ DOCUMENTATION ]
    * Fixed typos in base64 method description

    [ FEATURE ]
    * Improved handling of cases where the cost / salt methods
      have never been called

    [ TESTS ]
    * Improved error handling tests


0.1.0   2012-03-31

    ** First Public Release **

    [ DOCUMENTATION ]
    * Added Documentation

    [ TESTS ]
    * Added Test Suite


0.0.1   2011-03-30

    ** First Draft **